20120722

* GNU Parallel was presented at Chiang Mai Bar Camp
  http://barcampchiangmai.org/
  See write up here:
  http://www.cnx-software.com/2012/07/02/use-gnu-parallel-to-speed-up-script-execution-on-multiple-cores-andor-machines/

* I don't always max out all my CPUs, but when I do, I do it with GNU
  Parallel.
  http://memegenerator.net/instance/22638454

* Bug fixes and man page updates.


20120622

* '-L n --pipe' will use records of n lines. This is useful when
  processing data that have fixed records with a fixed number of
  lines (e.g. fastq).

* --filter-hosts will remove down hosts. For each remote host: check
  that login through ssh works. If not: do not use this host.
  Currently you can not put --filter-hosts in a profile, $PARALLEL,
  /etc/parallel/config or similar. This is because GNU Parallel uses
  GNU Parallel to compute this, so you will get an infinite loop. This
  will likely be fixed in a later release.

* --pipe now uses fork() instead of busy wait. The performance should
  be better on computers with >10 cores while remaining the same on
  computers with few cores.

* GNU Parallel will be represented at Chiang Mai Bar Camp.
  http://barcampchiangmai.org/

* Indexing Big Data on Amazon AWS: The Screencast
  (Check out his T-shirt at 18:40-21:00).
  http://www.opensourceconnections.com/2012/06/06/indexing-big-data-on-amazon-aws-screencast/

* biotoolbox uses GNU Parallel.
  https://code.google.com/p/biotoolbox/wiki/Pod_novo_wrapper

* Spiceweasel uses GNU Parallel.
  https://github.com/mattray/spiceweasel

* GNU Parallel part of The Administrators Challenge.
  http://challenge.twistedrack.com/questions/qs3.php

* Finding Oldest Firefox Code using GNU Parallel.
  http://gregoryszorc.com/blog/2012/06/18/finding-oldest-firefox-code/

* Bug fixes (quite a few for remote job running) and man page updates.


20120522

* Timings in --joblog now with milliseconds.

* Thesis using GNU Parallel (correctly cited; hooray!).